--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
         <div class="info">
-                <img src="./Img/Img1.jpg" width="500" alt="Тут моё фото" class="avatar"/>
+                <img src="https://sun9-54.userapi.com/impg/oQpbnycw4maRjQFqWRhr_FgxjTgk3Tprk7ra3A/u2BG1ZBpYjk.jpg?size=1080x1080&quality=96&sign=85a63be26707c9d98abdb0c484de61d1&type=album" width="500" alt="Тут моё фото" class="avatar"/>
 
                 <div class="info-text">
                 <h1>Антипова Елена Константиновна</h1>
