--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
         <div class="info">
-                <img src="./Img/Img1.jpg" width="500" alt="Тут моё фото" class="avatar"/>
+                <img src="https://sun9-54.userapi.com/impg/oQpbnycw4maRjQFqWRhr_FgxjTgk3Tprk7ra3A/u2BG1ZBpYjk.jpg?size=1080x1080&quality=96&sign=85a63be26707c9d98abdb0c484de61d1&type=album" width="500" alt="Тут моё фото" class="avatar"/>
 
                 <div class="info-text">
                 <h1>Антипова Елена Константиновна</h1>
@@ -40,7 +40,7 @@
                 <li>Магистр НГИЭУ (НГИЭИ) 2020
                     Экономического факультета по специальности
                     "Кафедра экономики и автоматизации бизнес-процессов" тут же тема диссертационной работы в магистратуре: «Сравнение принципов и методов управления проектами и процессами в многофункциональных центрах Нижегородской области». По результатам диссертационного исследования имеются внедренные практики.</li>
-                <li>(Аспирантка)Студентка
+                <li>Студентка(Аспирантка)
                     НГИЭУ (НГИЭИ) 2023
                     Кафедра:Экономика и автоматизация бизнес-процессов</li>
             </ol>
@@ -52,7 +52,16 @@
             <li>коммуникабельность | дисциплинированность | стрессоустойчивость |<br>
                  решение нестандартных задач в рамках рабочего процесса</li>
             <li>
-                <a href="/index2.html" target="_blank">Сертификаты(нажмите для просмотра)</a>
+                <a href="https://sun9-32.userapi.com/impg/GIpVxRCP1aPF5iJ6Nb0khTGK6iaEYpEJkBEZJg/AK_Qr-DMOrI.jpg?size=927x642&quality=96&sign=50aa1211da8fdb6d423338248633295f&type=album" target="_blank">Медиация в профессиональной деятельности(нажмите для просмотра)</a>
+            </li>
+            <li>
+                <a href="https://sun9-7.userapi.com/impg/VoN7PWN1oUHHj6u8n92XqFtQLuvHIIpjAIK0wg/4pFLzbnWu-E.jpg?size=618x438&quality=96&sign=20100a674a4d926d3b9ca0418694dc82&type=album" target="_blank">Прикладной статистический анализ(нажмите для просмотра)</a>
+            </li>
+            <li>
+                <a href="https://sun9-40.userapi.com/impg/ZOBKpVWbFIWxriY29Bx4fnpKD8ctmcDvOTS1_Q/3r1xXPEkjgA.jpg?size=419x588&quality=96&sign=cd3c1ef87c24f1df2e20195627460709&type=album" target="_blank">Прикладные аспекты научной коммуникации и аттестации:от публикации до защиты кандидатской диссертации(нажмите для просмотра)</a>
+            </li>
+            <li>
+                <a href="https://sun9-17.userapi.com/impg/7pAiRYUezAVN8IEiUTx5nDKct63QcFWSb1KlUA/Q1isLWaB_3U.jpg?size=1137x582&quality=96&sign=e638aa7f4b783ed34daba0e1e81f50ea&type=album" target="_blank">Результат теста по критическому мышлению(нажмите для просмотра)</a>
             </li>
             <hr>
             <h2>Мои хобби</h2>
